@@ -1,7 +1,11 @@
 Dewarping with a regular calibration point grid
 https://forum.diybookscanner.org/viewtopic.php?f=19&t=2589
 GNU GPL Version 3
-28 May 2012
+14 Aug 2013
+
+The version 1.1 of ppmunwarp with PPI features
+
+    is presented to obtain PPI information
 
 Version 1.0 of ppmunwarp
 
